'Delimit' in 'Select Linked' works unexpectedly when editing multiple objects #81288

Closed
opened 2020-09-29 11:40:06 +02:00 by Marcin Twarowski · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-29 00:11, hash: b150071ece

Short description of error
This bug can only be reproduced when selecting linked by hovering mouse cursor and pressing 'l'. If edge is selected first, before selecting linked, then it works as expected. Also works correctly when selecting vertices of an "active" object.

Exact steps for others to reproduce the error

  • Open file.
    multiple_obj_sel_limit_seam.blend
  • Hover mouse over mesh on the left. That's the object that's been selected as first.
  • Press 'l' (select linked).
    obraz.png
  • Choose any of the options from the delimit menu.
    obraz.png
  • Selection will be switched to the other object.
    obraz.png
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-29 00:11, hash: `b150071ece` **Short description of error** This bug can only be reproduced when selecting linked by hovering mouse cursor and pressing 'l'. If edge is selected first, before selecting linked, then it works as expected. Also works correctly when selecting vertices of an "active" object. **Exact steps for others to reproduce the error** - Open file. [multiple_obj_sel_limit_seam.blend](https://archive.blender.org/developer/F8935463/multiple_obj_sel_limit_seam.blend) - Hover mouse over mesh on the left. That's the object that's been selected as first. - Press 'l' (select linked). ![obraz.png](https://archive.blender.org/developer/F8935449/obraz.png) - Choose any of the options from the delimit menu. ![obraz.png](https://archive.blender.org/developer/F8935452/obraz.png) - Selection will be switched to the other object. ![obraz.png](https://archive.blender.org/developer/F8935455/obraz.png)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @patjan

Added subscriber: @patjan

This issue was referenced by d5555115e1

This issue was referenced by d5555115e121eac0960f2de981b8dcdd175bcf49

This issue was referenced by 211d7ff3cf

This issue was referenced by 211d7ff3cf27db44d961b704d11cda8d26c0e81a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-10-13 08:01:24 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:39 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81288
There is no content yet.