Fix T81288:Select Linked fails with multi-object edit mode

Changing options after using select-linked didn't work
when the object being selected wasn't the active object.